@@ -9,6 +9,7 @@ PHP                                                                        NEWS
 - Rewrote strtotime() with support for timezones and tons of new formats.
   (Derick)
 - Added bindto socket context option. (Ilia)
+- Added offset parameter to the stream_copy_to_stream() function. (Ilia)
 - Fixed PDO shutdown problem (possible inifite loop running rollback on
   shutdown). (Wez)
 - Fixed PECL bug #3714 (beginTransaction doesn't work if you're in
